app/home/static/css/resume.css
ul {
  list-style: square;
}

.card {
  padding: 15px 15px;
  border-bottom: 1px solid;
}

.resume #edu-content {
  display: flex;
  flex-direction: row;
  justify-content: left;
}

.resume #edu-content #edu-right p{
  text-align: right;
}

.resume #edu-content .edu-card {
  padding: 8px 15px;
}

.resume #edu-content #edu-left {
  border-right: 2px solid blue;
  min-width: 330px;
  max-width: 330px;
}

.resume #edu-content h3 {
  color: rgb(50,0,255);
  text-align: right;
}

.resume #exp-content {
  display: flex;
  flex-direction: column;
}

.resume #exp-content .exp-card {
  padding: 8px 15px;
  align-self: center;
  max-width: 330px;
  min-width: 330px;
}

.resume #exp-content #pickens {
  display: flex;
}

.resume #exp-content #exp-left {
  text-align: right;
  border-right: 2px solid blue;
}

.resume #exp-content #exp-left h3 {
  color: rgb(50,0,255);
}

.resume #exp-content #exp-right {
  align-self: center;
}

.resume #exp-content .exp-info {
  list-style: square;
}

.resume #exp-content .exp-info li {
  padding: 8px;
}

.resume #exp-content #bilo {
  display: flex;
}

.resume #exp-content #exp-right {
  max-width: 100%;
}

.resume #exp-content #wireless {
  display: flex;
}

